k8s/2-bookmarker-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmarker-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmarker-api-pod
  template:
    metadata:
      labels:
        app: bookmarker-api-pod
    spec:
      containers:
        - name: bookmarker
          image: kuroshan/bookmarker-api:5.0
          ports:
            - containerPort: 8080
