k8s/4-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarker-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    -  host: "k8s-server.com"
       http:
         paths:
           - pathType: Prefix
             path: "/bookmarker-api(/|$)(.*)"
             backend:
               service:
                 name: bookmarker-api-svc
                 port:
                   number: 8080
